fixed overflow, integrated card code from p-request
scrolling for days. baked the cards right into the crust.

--- a/Assignment2/src/main/java/assets/css/AcesUp.css
+++ b/Assignment2/src/main/java/assets/css/AcesUp.css
@@ -21,6 +21,7 @@ h1{
 tr{
 width:500px;
 font-weight:900;
+vertical-align:top;
 }
 
 td{
@@ -39,3 +40,13 @@ font-weight: bold;
 width: 100px;
 background-color:#F0F0F0;
 }
+
+.card{
+ 	width: 90px;
+ 	border: 1px solid gray;
+ 	box-shadow: 1px 1px 3px #888;
+ 	border-bottom: 10px;
+ 	min-height: 60px;
+ 	padding: 6px;
+ 	margin: 6px;
+ }
